Implement starring repository
